--- a/pinMapF3/pinMapF3.ioc
+++ b/pinMapF3/pinMapF3.ioc
@@ -1,9 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
+CAN.CalculateBaudRate=166666
+CAN.CalculateTimeBit=6000
 CAN.CalculateTimeQuantum=2000.0
-CAN.IPParameters=CalculateTimeQuantum
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
+Mcu.CPN=STM32F303K8T6
 Mcu.Family=STM32F3
 Mcu.IP0=CAN
 Mcu.IP1=NVIC
@@ -14,9 +20,11 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin10=PA12
-Mcu.Pin11=PA15
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA15
+Mcu.Pin13=PB4
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -24,24 +32,24 @@ Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PA8
 Mcu.Pin8=PA9
-Mcu.Pin9=PA11
-Mcu.PinsNb=13
+Mcu.Pin9=PA10
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
-MxCube.Version=5.6.0
-MxDb.Version=DB.5.0.60
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+MxCube.Version=6.9.2
+MxDb.Version=DB.6.0.92
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=encoder_right_AF01
 PA0.Locked=true
@@ -50,14 +58,18 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=encoder_right_AF01
 PA1.Locked=true
 PA1.Signal=S_TIM2_CH2
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=INPUT_EXTI_ULTRASON
+PA10.Locked=true
+PA10.Signal=GPXTI10
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=can_RX_AF09
-PA11.Mode=Master
+PA11.Mode=CAN_Activate
 PA11.Signal=CAN_RX
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=can_TX_AF09
 PA12.Locked=true
-PA12.Mode=Master
+PA12.Mode=CAN_Activate
 PA12.Signal=CAN_TX
 PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=debug_RX_AF7_USART2
@@ -91,8 +103,12 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=encoder_left_AF06
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=TRIGGER_ULTRASON
+PB4.Locked=true
+PB4.Signal=S_TIM16_CH1
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -106,7 +122,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -114,12 +130,15 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=pinMapF3.ioc
 ProjectManager.ProjectName=pinMapF3
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN_Init-CAN-false-HAL-true
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
@@ -140,6 +159,10 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.S_TIM16_CH1.0=TIM16_CH1
+SH.S_TIM16_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2
