--- a/pinMapF3/pinMapF3.ioc
+++ b/pinMapF3/pinMapF3.ioc
@@ -18,22 +18,26 @@ Mcu.IP3=SYS
 Mcu.IPNb=4
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA0
-Mcu.Pin1=PA1
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA15
-Mcu.Pin13=PB4
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=15
+Mcu.Pin0=PF0 / OSC_IN
+Mcu.Pin1=PF1 / OSC_OUT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA15
+Mcu.Pin15=PB4
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin2=PA0
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -51,24 +55,16 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=encoder_right_AF01
+PA0.GPIO_Label=ENCODER_B1
 PA0.Locked=true
 PA0.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=encoder_right_AF01
+PA1.GPIO_Label=ENCODER_B2
 PA1.Locked=true
 PA1.Signal=S_TIM2_CH2
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=INPUT_EXTI_ULTRASON
-PA10.Locked=true
-PA10.Signal=GPXTI10
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=can_RX_AF09
+PA11.Locked=true
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN_RX
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=can_TX_AF09
-PA12.Locked=true
 PA12.Mode=CAN_Activate
 PA12.Signal=CAN_TX
 PA15.GPIOParameters=GPIO_Label
@@ -80,33 +76,47 @@ PA2.GPIO_Label=debug_TX_AF7_USART2
 PA2.Locked=true
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=MotorADir
+PA3.GPIO_Label=MOTOR_B_DIR1
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=MotorAPWMTim3Ch2
+PA4.GPIO_Label=MOTOR_B_DIR2
 PA4.Locked=true
-PA4.Signal=S_TIM3_CH2
+PA4.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=MotorBPWMTim3ch1
+PA6.GPIO_Label=ENCODER_A1
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=MotorBDir
+PA7.GPIO_Label=ENCODER_A2
 PA7.Locked=true
-PA7.Signal=GPIO_Output
+PA7.Signal=S_TIM3_CH2
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=encoder_left_AF06
+PA8.GPIO_Label=MOTOR_A_PWM
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=encoder_left_AF06
+PA9.GPIO_Label=MOTOR_B_PWM
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=TRIGGER_ULTRASON
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=US_TRIGGER
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB4.Locked=true
 PB4.Signal=S_TIM16_CH1
+PB6.Locked=true
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Signal=I2C1_SDA
+PF0\ /\ OSC_IN.GPIOParameters=GPIO_Label
+PF0\ /\ OSC_IN.GPIO_Label=MOTOR_A_DIR1
+PF0\ /\ OSC_IN.Locked=true
+PF0\ /\ OSC_IN.Signal=GPIO_Output
+PF1\ /\ OSC_OUT.GPIOParameters=GPIO_Label
+PF1\ /\ OSC_OUT.GPIO_Label=MOTOR_A_DIR2
+PF1\ /\ OSC_OUT.Locked=true
+PF1\ /\ OSC_OUT.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -138,7 +148,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN_Init-CAN-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
@@ -159,8 +169,6 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
-SH.GPXTI10.0=GPIO_EXTI10
-SH.GPXTI10.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1
 SH.S_TIM16_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1
