--- a/pinMapF3/pinMapF3.ioc
+++ b/pinMapF3/pinMapF3.ioc
@@ -18,31 +18,30 @@ Mcu.IP3=SYS
 Mcu.IPNb=4
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PF0 / OSC_IN
-Mcu.Pin1=PF1 / OSC_OUT
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA15
-Mcu.Pin15=PB4
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin2=PA0
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=19
+Mcu.Pin0=PF1 / OSC_OUT
+Mcu.Pin1=PA0
+Mcu.Pin10=PA9
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA15
+Mcu.Pin14=PB4
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin2=PA1
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PA8
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
-MxCube.Version=6.9.2
-MxDb.Version=DB.6.0.92
+MxCube.Version=6.13.0
+MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -76,11 +75,11 @@ PA2.GPIO_Label=debug_TX_AF7_USART2
 PA2.Locked=true
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=MOTOR_B_DIR1
+PA3.GPIO_Label=MOTOR_B_DIR
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=MOTOR_B_DIR2
+PA4.GPIO_Label=MOTOR_EEP
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
@@ -103,18 +102,16 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=US_TRIGGER
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=US_ECHO
 PB4.Locked=true
 PB4.Signal=S_TIM16_CH1
 PB6.Locked=true
 PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Signal=I2C1_SDA
-PF0\ /\ OSC_IN.GPIOParameters=GPIO_Label
-PF0\ /\ OSC_IN.GPIO_Label=MOTOR_A_DIR1
-PF0\ /\ OSC_IN.Locked=true
-PF0\ /\ OSC_IN.Signal=GPIO_Output
 PF1\ /\ OSC_OUT.GPIOParameters=GPIO_Label
-PF1\ /\ OSC_OUT.GPIO_Label=MOTOR_A_DIR2
+PF1\ /\ OSC_OUT.GPIO_Label=MOTOR_A_DIR
 PF1\ /\ OSC_OUT.Locked=true
 PF1\ /\ OSC_OUT.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -127,12 +124,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F303K8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F3 V1.11.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F3 V1.11.5
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -148,7 +145,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN_Init-CAN-false-HAL-true
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
