--- a/pinMapF3/pinMapF3.ioc
+++ b/pinMapF3/pinMapF3.ioc
@@ -20,11 +20,11 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF1 / OSC_OUT
 Mcu.Pin1=PA0
-Mcu.Pin10=PA9
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA15
-Mcu.Pin14=PB4
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA15
+Mcu.Pin13=PB4
+Mcu.Pin14=PB5
 Mcu.Pin15=PB6
 Mcu.Pin16=PB7
 Mcu.Pin17=VP_SYS_VS_Systick
@@ -34,8 +34,8 @@ Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PA8
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
 Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -98,14 +98,14 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=MOTOR_B_PWM
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=US_TRIGGER
-PB0.Locked=true
-PB0.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=US_ECHO
 PB4.Locked=true
 PB4.Signal=S_TIM16_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=US_TRIGGER
+PB5.Locked=true
+PB5.Signal=S_TIM17_CH1
 PB6.Locked=true
 PB6.Signal=I2C1_SCL
 PB7.Locked=true
@@ -168,6 +168,8 @@ RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
 SH.S_TIM16_CH1.0=TIM16_CH1
 SH.S_TIM16_CH1.ConfNb=1
+SH.S_TIM17_CH1.0=TIM17_CH1
+SH.S_TIM17_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2
